src/test/deca/context/valid/autre/read-float.deca
// Description:
//    Test valide du lexer.
//
// Resultats:
//    read float

{
    float a = readFloat();
}
