src/test/deca/context/invalid/print/println-null.deca
// Description:
//    Test print null.
//
// Resultats:
//    ok

{
    println(null);
}